packages/cashc/test/compiler/ParseError/unary_plus.cash
contract Test() {
    return {
        hello(int a) {
            int b = 10 - +4;
            require(b == a);
        }
    }
}
